# daily-bcp

./: .gitignore  LICENSE  README.md  bcp.sh  collects.yaml  may_morning.csv  pyproject.toml
bcp_cli/: __init__.py  bible_api.py  cli.py  config.py  data.py  errors.py  history.py  notes.py  pager.py  prayers.py  references.py  render.py
bcp_cli/data/: collects.yaml  june_evening.csv  june_morning.csv  may_evening.csv
docs/: development.md
tests/: test_cli.py
