[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bcp-cli"
version = "0.1.0"
description = "Terminal-first Daily Office reader."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bcp = "bcp_cli.cli:main"

[tool.setuptools.packages.find]
include = ["bcp_cli*"]

[tool.setuptools.package-data]
bcp_cli = ["data/*.csv", "data/*.yaml"]
